<resources>
    <string name="app_name">GestorDeClientes</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_pass">Ingrese su Contraseña</string>
    <string name="login_hint_user">Ingrese su Usuario</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="form_hint_rut">Rut sin puntos ni guion Ej: 18123456k</string>
    <string name="form_hint_nombre">Nombre</string>
    <string name="form_hint_apellido">Apellido</string>
    <string name="form_hint_telefono">Telefono</string>
    <string name="form_hint_correo">Correo</string>

    <string name="item_cliente_rut">Rut: %1$s</string>
    <string name="item_cliente_marca">Moto: %1$s</string>
    <string name="item_cliente_modelo">Modelo: %1$s</string>

    <!-- PARAMETROS -->

    <string-array name="parametros">
        <item>Rut</item>
        <item>Nombre</item>
        <item>Apellido</item>
        <item>Telefono</item>
        <item>Comuna</item>
        <item>Marca</item>
        <item>Modelo</item>
        <item>Año</item>
    </string-array>

    <!-- COMUNAS -->
    <string-array name="comunas">
        <item>Comuna</item>
        <item>Cerrillos</item>
        <item>Cerro Navia</item>
        <item>Conchalí</item>
        <item>El Bosque</item>
        <item>Estación Central</item>
        <item>Huechuraba</item>
        <item>Independencia</item>
        <item>La Cisterna</item>
        <item>La Florida</item>
        <item>La Granja</item>
        <item>La Pintana</item>
        <item>La Reina</item>
        <item>Las Condes</item>
        <item>Lo Barnechea</item>
        <item>Lo Espejo</item>
        <item>Lo Prado</item>
        <item>Macul</item>
        <item>Maipú</item>
        <item>Pedro Aguirre Cerda</item>
        <item>Peñalolén</item>
        <item>Pirque</item>
        <item>Providencia</item>
        <item>Pudahuel</item>
        <item>Puente Alto</item>
        <item>Quilicura</item>
        <item>Quinta Normal</item>
        <item>Recoleta</item>
        <item>Renca</item>
        <item>San Joaquín</item>
        <item>San José de Maipo</item>
        <item>San Miguel</item>
        <item>San Ramón</item>
        <item>Santiago</item>
        <item>Vitacura</item>
        <item>Ñuñoa</item>
    </string-array>

</resources>
